fixed display so text no longer overflows

--- a/styles.css
+++ b/styles.css
@@ -30,22 +30,21 @@ body {
     align-items: center;
     justify-content: end;
     overflow: hidden;   
-
+    border: 2px solid red;
+    box-sizing: border-box;
 
 }
 
 #display-text {
-    max-width: 90%;
+    max-width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 60px;
     font-weight: bold;
-    white-space: nowrap;
     flex-shrink: 0;
-
-    margin: 0;
     border: 2px solid green;
-    flex: 0;
-    
+    box-sizing: border-box;
 }
 
 .btn-container {
